<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.reiserx.screenshot.Activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_silent_screenshots"
        android:name="com.reiserx.screenshot.Activities.ui.silent_screenshots.SilentScreenshotsFragment"
        android:label="@string/title_silent_screenshots"
        tools:layout="@layout/fragment_silent_screenshots" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.reiserx.screenshot.Activities.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>